# Send_to_LLM

./: .env  CLAUDE.md
llm-translator/: Cargo.toml  tauri.conf.json
llm-translator/src/: lib.rs
llm-translator/src/clipboard/: manager.rs  mod.rs
llm-translator/src/config/: mod.rs  settings.rs
llm-translator/src/hotkeys/: handlers.rs  listener.rs  mod.rs  validator.rs
llm-translator/src/llm/: api_types.rs  client.rs  manager.rs  mod.rs  text_splitter.rs
llm-translator/src/tray/: handler.rs  icon.rs  menu.rs  mod.rs
llm-translator/src/validation/: limits.rs  mod.rs  text.rs
llm-translator/ui/: settings.css  settings.html  settings.js
