[package]
name = "llm-translator"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Configuration
toml = "0.8"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Clipboard
arboard = "3.3"
enigo = "0.1"

# Hotkeys
global-hotkey = "0.5"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/Time
chrono = "0.4"

# Collections
dashmap = "5.5"

# Platform detection
cfg-if = "1.0"

# Random numbers for jitter
fastrand = "2.0"

# Async cancellation
tokio-util = "0.7"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# System directories
dirs = "5.0"

# Development dependencies
[dev-dependencies]
mockall = "0.11"
pretty_assertions = "1.4"
tempfile = "3.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
